samples/_failures_safe/1761377232_78b0a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dae5848c.c: In function ‘main’:
./samples/SAFE/__tmp_dae5848c.c:161:11: error: expected ‘;’ at end of input
  161 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_dae5848c.c:161:5: error: expected declaration or statement at end of input
  161 |     printf
      |     ^~~~~~
